[gd_scene load_steps=22 format=2]

[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/janine.png" type="Texture" id=2]
[ext_resource path="res://art/20230107_154334.png" type="Texture" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://scripts/Lives.gd" type="Script" id=5]
[ext_resource path="res://characters/Character.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/godfrey.png" type="Texture" id=7]
[ext_resource path="res://scripts/Susometer.gd" type="Script" id=8]
[ext_resource path="res://art/meter.png" type="Texture" id=10]
[ext_resource path="res://art/meter_inner.png" type="Texture" id=11]
[ext_resource path="res://art/j.png" type="Texture" id=12]
[ext_resource path="res://addons/dialogic/Editor/Theme/MainTheme.tres" type="Theme" id=13]
[ext_resource path="res://fonts/ShareTechMono-Regular.tres" type="DynamicFont" id=14]
[ext_resource path="res://fonts/ShareTechMono-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://art/bog.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
size = 100
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -1740.0
margin_top = -1079.0
margin_right = 11575.0
margin_bottom = 14.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="Scene" type="Node2D" parent="."]

[node name="Player" parent="Scene" instance=ExtResource( 1 )]
position = Vector2( 0, -19 )
z_index = 1

[node name="Godfrey" parent="Scene" instance=ExtResource( 6 )]
position = Vector2( 1716, -41 )
texture = ExtResource( 7 )
character_name = "Godfrey"
timeline_name = "godfrey"

[node name="Janine" parent="Scene" instance=ExtResource( 6 )]
position = Vector2( 3716, -79 )
texture = ExtResource( 2 )
character_name = "Janine"
timeline_name = "janine"

[node name="J" parent="Scene" instance=ExtResource( 6 )]
position = Vector2( 6193, -113 )
texture = ExtResource( 12 )
character_name = "J"
timeline_name = "j"

[node name="Bog" parent="Scene" instance=ExtResource( 6 )]
position = Vector2( 8958, -69 )
texture = ExtResource( 16 )
character_name = "Bog"
timeline_name = "bog"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Susometer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 1565.0
margin_top = 15.0
margin_right = 1894.0
margin_bottom = 674.0
script = ExtResource( 8 )

[node name="Progress" type="TextureProgress" parent="CanvasLayer/Susometer"]
margin_right = 329.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 110.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 11 )
fill_mode = 3
nine_patch_stretch = true

[node name="Label" type="Label" parent="CanvasLayer/Susometer"]
margin_top = 601.0
margin_right = 329.0
margin_bottom = 659.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
text = "Suspicion"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="CanvasLayer/Susometer"]

[node name="Lives" type="GridContainer" parent="CanvasLayer"]
margin_left = 23.0
margin_top = -73.0
margin_right = 1473.0
margin_bottom = 279.0
columns = 10
script = ExtResource( 5 )

[node name="GameOver" type="Label" parent="CanvasLayer"]
visible = false
margin_right = 1917.0
margin_bottom = 908.0
custom_fonts/font = SubResource( 10 )
text = "Game Over"
align = 1
valign = 1

[node name="Restart" type="Button" parent="CanvasLayer/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = 85.0
margin_right = 86.5
margin_bottom = 141.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 14 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
text = "Restart"

[node name="GameWin" type="Label" parent="CanvasLayer"]
visible = false
margin_top = -122.0
margin_right = 1917.0
margin_bottom = 697.0
custom_fonts/font = SubResource( 10 )
text = "Game Complete"
align = 1
valign = 1

[node name="BrainsHarvestedLabel" type="Label" parent="CanvasLayer/GameWin"]
margin_left = 767.0
margin_top = 509.0
margin_right = 1144.0
margin_bottom = 546.0
custom_fonts/font = ExtResource( 14 )
text = "Brains harvested:"
align = 1
valign = 1

[node name="Restart" type="Button" parent="CanvasLayer/GameWin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = 190.0
margin_right = 81.5
margin_bottom = 246.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 14 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
text = "Play Again?"

[connection signal="pressed" from="CanvasLayer/GameOver/Restart" to="." method="_on_restart_game"]
[connection signal="pressed" from="CanvasLayer/GameWin/Restart" to="." method="_on_restart_game"]
